--- a/TiendApp/app/src/main/res/layout/activity_home.xml
+++ b/TiendApp/app/src/main/res/layout/activity_home.xml
@@ -1,25 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
 
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:stretchColumns="*"
     tools:context=".HomeActivity"
     android:id="@+id/home_layout">
 
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/scrollView_home1" >
-
-    </ScrollView>
 
     <LinearLayout
         android:orientation="vertical"
@@ -49,18 +39,49 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
-        <ScrollView
-            android:layout_width="match_parent"
+        <HorizontalScrollView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/scrollView_home2" >
-
+            android:id="@+id/scrollView_home2">
 
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingRight="30dp">
+                android:layout_height="match_parent">
 
+
+                <!-- Product sample with text -->
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp">
+
+                    <ImageView
+                        android:id="@+id/product_image1"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        />
+
+                    <TextView
+                        android:id="@+id/product_name1"
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+                        android:textSize="15dp"
+                        android:minLines="2"
+                        android:maxLines="2"
+                        android:layout_below="@+id/product_image1" />
+
+                    <TextView
+                        android:id="@+id/product_price1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textSize="15dp"
+                        android:textStyle="bold"
+                        android:layout_below="@+id/product_name1" />
+
+                </RelativeLayout>
 
                 <RelativeLayout
                     android:layout_width="wrap_content"
@@ -68,37 +89,136 @@
                     android:layout_marginLeft="20dp">
 
                     <ImageView
-                        android:id="@+id/product_image"
+                        android:id="@+id/product_image2"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         />
 
                     <TextView
-                        android:id="@+id/product_name"
+                        android:id="@+id/product_name2"
                         android:layout_width="100dp"
                         android:layout_height="wrap_content"
                         android:textSize="15dp"
                         android:minLines="2"
                         android:maxLines="2"
-                        android:layout_below="@+id/product_image" />
+                        android:layout_below="@+id/product_image2" />
 
                     <TextView
-                        android:id="@+id/product_price"
+                        android:id="@+id/product_price2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
                         android:textColor="@color/colorPrimaryDark"
                         android:textSize="15dp"
                         android:textStyle="bold"
-                        android:layout_below="@+id/product_name" />
+                        android:layout_below="@+id/product_name2" />
 
+                </RelativeLayout>
 
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp">
+
+                    <ImageView
+                        android:id="@+id/product_image3"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        />
+
+                    <TextView
+                        android:id="@+id/product_name3"
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+                        android:textSize="15dp"
+                        android:minLines="2"
+                        android:maxLines="2"
+                        android:layout_below="@+id/product_image3" />
+
+                    <TextView
+                        android:id="@+id/product_price3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textSize="15dp"
+                        android:textStyle="bold"
+                        android:layout_below="@+id/product_name3" />
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp">
+
+                    <ImageView
+                        android:id="@+id/product_image4"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        />
+
+                    <TextView
+                        android:id="@+id/product_name4"
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+                        android:textSize="15dp"
+                        android:minLines="2"
+                        android:maxLines="2"
+                        android:layout_below="@+id/product_image4" />
+
+                    <TextView
+                        android:id="@+id/product_price4"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textSize="15dp"
+                        android:textStyle="bold"
+                        android:layout_below="@+id/product_name4" />
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp">
+
+                    <ImageView
+                        android:id="@+id/product_image5"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        />
+
+                    <TextView
+                        android:id="@+id/product_name5"
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+                        android:textSize="15dp"
+                        android:minLines="2"
+                        android:maxLines="2"
+                        android:layout_below="@+id/product_image5" />
+
+                    <TextView
+                        android:id="@+id/product_price5"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textSize="15dp"
+                        android:textStyle="bold"
+                        android:layout_below="@+id/product_name5" />
 
                 </RelativeLayout>
 
 
+                <!-- End product sample -->
+
+
             </LinearLayout>
-        </ScrollView>
+
+
+        </HorizontalScrollView>
 
         <TextView
             android:id="@+id/women_home"
@@ -118,13 +238,26 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
+        <HorizontalScrollView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/scrollView_home3">
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            </LinearLayout>
+        </HorizontalScrollView>
+
         <TextView
             android:id="@+id/children_home"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/gender_kids"
             android:textSize="20sp"
-            android:layout_marginTop="150dp"
+            android:layout_marginTop="20dp"
             android:layout_marginLeft="20dp"
             android:textColor="#000000"
             android:layout_below="@+id/div2"
@@ -136,13 +269,26 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
+        <HorizontalScrollView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/scrollView_home4">
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            </LinearLayout>
+        </HorizontalScrollView>
+
         <TextView
             android:id="@+id/babies_home"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/gender_babies"
             android:textSize="20sp"
-            android:layout_marginTop="150dp"
+            android:layout_marginTop="20dp"
             android:layout_marginLeft="20dp"
             android:textColor="#000000"
             android:layout_below="@+id/div3"
@@ -154,13 +300,26 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
+        <HorizontalScrollView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/scrollView_home5">
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            </LinearLayout>
+        </HorizontalScrollView>
+
         <TextView
             android:id="@+id/new_ins_home"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/new_ins"
             android:textSize="20sp"
-            android:layout_marginTop="150dp"
+            android:layout_marginTop="20dp"
             android:layout_marginLeft="20dp"
             android:textColor="#000000"
             android:layout_below="@+id/div4"
@@ -172,13 +331,26 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
+        <HorizontalScrollView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/scrollView_home6">
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            </LinearLayout>
+        </HorizontalScrollView>
+
         <TextView
             android:id="@+id/sale_home"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/sale"
             android:textSize="20sp"
-            android:layout_marginTop="150dp"
+            android:layout_marginTop="20dp"
             android:layout_marginLeft="20dp"
             android:textColor="#000000"
             android:layout_below="@+id/div5"
@@ -189,7 +361,20 @@
             android:layout_below="@+id/sale_home"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
+
+        <HorizontalScrollView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/scrollView_home7">
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            </LinearLayout>
+        </HorizontalScrollView>
     </LinearLayout>
 
 
-</RelativeLayout>
+</ScrollView>
