--- a/TiendApp/app/src/main/res/layout/activity_categories.xml
+++ b/TiendApp/app/src/main/res/layout/activity_categories.xml
@@ -78,7 +78,7 @@
 
                 </LinearLayout>
 
-                <LinearLayout
+                <RelativeLayout
                     android:id="@+id/categories_tab_content_news"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -87,25 +87,28 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:text="123"/>
+                        android:textSize="@dimen/title_size"
+                        android:text="@string/no_disponible" />
 
 
-                </LinearLayout>
+                </RelativeLayout>
 
-                <LinearLayout
+                <RelativeLayout
                     android:id="@+id/categories_tab_content_sale"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_gravity=""
                     android:orientation="vertical">
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:text="fasghh"/>
+                        android:textSize="@dimen/title_size"
+                        android:text="@string/no_disponible"/>
 
 
 
-                </LinearLayout>
+                </RelativeLayout>
             </FrameLayout>
         </LinearLayout>
     </TabHost>
